media/jackett/deployment.yaml
# Source: jackett/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jackett
  namespace: media
  labels:
    app: jackett
spec:
  replicas: 1
  selector:
    matchLabels:
      app: jackett
      release: jackett
  template:
    metadata:
      labels:
        app: jackett
        release: jackett
    spec:
      volumes:
        - name: media
          persistentVolumeClaim:
            claimName: media
        - hostPath:
            path: /dev/net/tun
          name: dev-tun
        - name: jackett-secret
          secret:
            secretName: openvpn
      nodeSelector:
        kubernetes.io/arch: "amd64"
      containers:
        - name: jackett
          image: jackett
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 9117
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: media
              subPath: configs/jackett
            - mountPath: /downloads
              name: media
              subPath: downloads/jackett
            - mountPath: /config/openvpn/
              name: jackett-secret
          resources:
            limits:
              cpu: "0.5"
              memory: 256Mi
            requests:
              cpu: "0.1"
              memory: 128Mi
          securityContext:
            capabilities:
              add:
                - NET_ADMIN
