media/jackett/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
  name: jackett
  namespace: media
spec:
  ingressClassName: nginx
  rules:
    - host: jackett.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: jackett
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - jackett.int.kyledev.co
      secretName: jackett-kyledev-tls-prod
